--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -49,7 +49,7 @@
         <div class="chat-area w-75">
             <div class="chat_estructura p-2 relleno bg-light" id="caja-mensajes">
             </div>
-            <div class="p-3" style="display: flex;">
+            <div class="area-mensaje" style="display: flex;">
 {{!--             <h6 class="text-center w-100 fs-4">Username</h6> --}}
                 <form action="" class="gap-2" id="formMensaje">
                     <div class="area-mensaje">
