--- a/views/register.hbs
+++ b/views/register.hbs
@@ -27,7 +27,7 @@
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error </small>
                 </div>
-                <button type="submit">Enviar</button>
+                <button type="submit" class="btn">Enviar</button>
                 <p class="sociales_p">O también por: </p>
                 <div class="sociales">
                     <div class="sociales-materia">
