cambio de fondo

--- a/public/scss/landing/landing.scss
+++ b/public/scss/landing/landing.scss
@@ -9,7 +9,7 @@ body{
 }
 
 .hero{
-    background-image: linear-gradient(120deg, #ffb009 0%, #7c4cc3 100%), url("../img/header.jpg");
+    background-image: linear-gradient(120deg,rgba(253,245,207,1) 15%, rgba(156,114,216,1) 60%) ;;
     width: 100%;
     height: 650px;
     background-repeat: no-repeat;
