--- a/public/scss/registro/registro.scss
+++ b/public/scss/registro/registro.scss
@@ -6,7 +6,7 @@
 }
 
 body {
-	background-image: linear-gradient(120deg,#ffb009 15%, #7c4cc3 60%) ;
+	background-image: linear-gradient(120deg,rgba(253,245,207,1) 15%, rgba(156,114,216,1) 60%) ; ;
 	font-family: 'Open Sans', sans-serif;
 	display: flex;
 	align-items: center;
