--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,7 +10,7 @@ body {
 }
 
 .hero {
-  background-image: linear-gradient(120deg, #ffb009 0%, #7c4cc3 100%), url("../img/header.jpg");
+  background-image: linear-gradient(120deg, rgb(253, 245, 207) 15%, rgb(156, 114, 216) 60%);
   width: 100%;
   height: 650px;
   background-repeat: no-repeat;
@@ -282,7 +282,7 @@ footer {
 body {
   height: 100vh;
   font-family: "Poppins", sans-serif;
-  background-image: linear-gradient(120deg, #ffb009 15%, #7c4cc3 60%);
+  background-image: linear-gradient(120deg, rgb(253, 245, 207) 15%, rgb(156, 114, 216) 60%);
 }
 
 .login-container {
@@ -442,7 +442,7 @@ body {
 }
 
 body {
-  background-image: linear-gradient(120deg, #ffb009 15%, #7c4cc3 60%);
+  background-image: linear-gradient(120deg, rgb(253, 245, 207) 15%, rgb(156, 114, 216) 60%);
   font-family: "Open Sans", sans-serif;
   display: flex;
   align-items: center;
