--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,7 +15,7 @@
     <div class="textos-hero">
         <span class="Antara"><h1>Antara chat</h1><i class='bx bxs-message-rounded-dots'></i></span>
         <p>La red de chat para contactar personas</p>
-        <a href="/register">Registrate</a>
+        <a href="/register" id="boton_registro">Registrate</a>
     </div>
     <div class="imagengatito">
         <img src="/img/kitty_1_CC.png" alt="">
@@ -25,9 +25,9 @@
 <section class="wave-contenedor website">
         <img src="img/primer.jpg" alt="">
         <div class="contenedor-textos-main">
-            <h2 class="titulo left">¿Quienes Somos?</h2>
+            <h2 class="titulo left">¿Quiénes Somos?</h2>
             <p class="parrafo">
-                "Somos una red de chat para generar mas contactos , es un ambiente tranquilo con la facilidad de adaptarce a cada etapa de tu vida"
+                "Somos una red de chat para generar más contactos, es un ambiente tranquilo con la facilidad de adaptarse a cada etapa de tu vida"
             </p>
             <a href class="cta">Información</a>
         </div>
@@ -47,8 +47,8 @@
         <div class="content-cards">
             <article class="card">
                 <i class="far fa-clone" aria-hidden="true"></i>
-                <h3>Miedos</h3>
-                <p>Sensación de angustia provocada por la presencia de un peligro real o imaginario.</p>
+                <h3>Hobbies</h3>
+                <p>Compartí y habla sobre los gustos o hobbies que disfrutas.</p>
                 <a href class="cta">Mas info</a>
             </article>
             <article class="card">
@@ -59,9 +59,9 @@
             </article>
             <article class="card">
                 <i class="far fa-clone" aria-hidden="true"></i>
-                <h3>Anecdotas</h3>
+                <h3>Anécdotas</h3>
                 <p>
-                    Relato breve de un acontecimiento extraño, curioso o divertido.</p>
+                    Relatos breve de un acontecimientos extraños, curiosos o divertidos.</p>
                 <a href class="cta">Mas info</a>
             </article>
         </div>
