--- a/public/css/app.css
+++ b/public/css/app.css
@@ -122,9 +122,14 @@ html {
   top: 160px;
   left: 650px;
   width: 78%;
+  z-index: 1;
 }
 .imagengatito img {
   width: 74%;
+}
+
+#boton_registro {
+  z-index: 10;
 }
 
 /* Estilos generales */
@@ -138,7 +143,7 @@ html {
 }
 
 .contenedor {
-  padding: 80px 0;
+  padding: 50px 0;
 }
 
 .titulo {
@@ -289,52 +294,83 @@ html {
   flex-direction: column;
 }
 
+@media screen and (min-width: 1900px) {
+  .imagengatito {
+    position: absolute;
+    top: 60px;
+    left: 930px;
+    width: 78%;
+  }
+  .imagengatito .imagengatito img {
+    width: 64%;
+  }
+}
+@media screen and (min-width: 1700px) {
+  .imagengatito {
+    position: absolute;
+    top: 60px;
+    left: 850px;
+    width: 78%;
+  }
+  .imagengatito .imagengatito img {
+    width: 64%;
+  }
+}
 @media screen and (max-width: 800px) {
-  .textos-hero h1 {
+  .imagengatito {
+    position: absolute;
+    top: 360px;
+    left: 430px;
+    width: 78%;
+    /* estilos generales */
+    /* section */
+    /* Cards */
+    /* galeria */
+    /* last */
+  }
+  .imagengatito .imagengatito img {
+    width: 68%;
+  }
+  .imagengatito .textos-hero h1 {
     text-align: center;
     font-size: 50px;
   }
-  /* estilos generales */
-  .titulo {
+  .imagengatito .titulo {
     font-size: 35px;
   }
-  .titulo.left {
+  .imagengatito .titulo.left {
     text-align: center;
   }
-  .info p {
+  .imagengatito .info p {
     text-align: center;
   }
-  /* section */
-  .website {
+  .imagengatito .website {
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
   }
-  .website img {
+  .imagengatito .website img {
     width: 100%;
   }
-  .website .contenedor-textos-main {
+  .imagengatito .website .contenedor-textos-main {
     width: 100%;
   }
-  /* Cards */
-  .card {
+  .imagengatito .card {
     width: 90%;
     margin-bottom: 20px;
   }
-  /* galeria */
-  .galeria-cont > img {
+  .imagengatito .galeria-cont > img {
     width: 48%;
   }
-  /* last */
-  .last-section img {
+  .imagengatito .last-section img {
     width: 98%;
   }
-  .last-section .contenedor-textos-main {
+  .imagengatito .last-section .contenedor-textos-main {
     width: 98%;
     margin-bottom: 20px;
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 800px) and (max-width: 400px) {
   .titulo,
 .textos-hero h1 {
     font-size: 30px;
@@ -351,6 +387,12 @@ html {
   }
   .galeria-cont > img {
     width: 97%;
+  }
+  .imagengatito img {
+    display: none;
+  }
+  .nav_landing p {
+    display: none;
   }
 }
 .limiter {
@@ -744,7 +786,6 @@ button, input, optgroup, select, textarea {
 }
 
 .form-control {
-  margin-bottom: 10px;
   padding-bottom: 20px;
   position: relative;
 }
@@ -1019,7 +1060,7 @@ button, input, optgroup, select, textarea {
 .chat-area .chat_estructura {
   display: flex;
   flex-direction: column;
-  height: 75vh;
+  height: 83vh;
   overflow-y: auto;
 }
 .chat-area .chat_estructura .mensaje {
@@ -1099,7 +1140,7 @@ button, input, optgroup, select, textarea {
   box-shadow: none;
   resize: none;
 }
-.chat-area .area-mensaje {
+.chat-area .p-3 {
   padding: 1rem 1rem 0;
 }
 .chat-area .gap-2 {
@@ -1108,7 +1149,7 @@ button, input, optgroup, select, textarea {
   width: 100%;
 }
 .chat-area .area-mensaje {
-  width: 90%;
+  width: 100%;
 }
 .chat-area .col {
   flex: 1 0 0%;
