--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,60 +1,43 @@
-<div class="limites">
-        <div class="container-login100">
-            <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                <form class="login100-form validate-form" id="formuser2">
-                <span class="login100-form-title p-b-49">LOGIN</span>
-                <div class="wrap-input100 validate-input m-b-23" data-validate="Nombre de Usuario">
-                    <span class="label-input100">Usuario</span>
-                    <input class="input100" type="email" id="signin-email" class="form-control"
-                    placeholder="Email" required>
-                    <span class="focus-input100" data-simbol=""></span>
-                    </span>
-        
-                </div>
-                <div class="wrap-input100 validate-input" >
-                    <span class="label-input100" >Contraseña</span>
-                    <input class="input100" type="password" id="signin-pass" class="form-control"
-                    placeholder="Password" required>
-                    <span class="focus-input100" data-symbol="">
-                    </span>
-                </div>
-                <div class="text-right p-t-8 p-b-31">
-                    <a href="#">Olvidaste tu Contraseña</a>
-                </div>
-                <div class="contenedor-boton-form-btn">
-                    <div class="wrap-login100-form-btn">
-                        <div class="login100-form-bgbtn"></div>
-                        <button class="login-form-btn"  type="submit">Login</button>
-                    </div>
-                </div>
-                <div class="txt1 text-center p-t-54 p-b-20">
-                    <span>Registrate tambien por</span>
-                </div>
-               <div class="flex-c-m">
-                <a href="#" class="login100-social-item bg1">
-                    <i class="fa fa-facebook">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="./css/app.css">
+    
+    <title>Login</title>
+</head>
+<body>
+    <div class="login-container">
+        <img class="image-container" src="img/violeta.jpg" alt="">
 
-                    </i>
-                </a>
-                <a href="#" class="login100-social-item bg2">
-                    <i class="fa fa-twitter">
-
-                    </i>
-                </a>
-                <a href="#" class="login100-social-item bg3">
-                    <i class="fa fa-google">
-
-                    </i>
-                </a>
-               </div>
-           
-
-                </form>
+          <div class="login-info-container">
+            <h1 class="title">Inicia sesión:</h1>
+            <form class="inputs-container">
+                <input class="input" type="text" placeholder="Usuario">
+                <input class="input" type="text" placeholder="Contraseña">
+                <p><span class="span"> Olvidaste tu Contraseña</span></p>
+                <button class="btn">login</button>
+                <p>¿Todavia no tenes una cuenta? <span class="span">Hace click aca</span></p>
+            </form>
+            <p>O tambien por: </p>
+               <div class="social-login">
+                <div class="social-login-element">
+                   <img src="img/google.svg" alt="">
+                    <span>Google</span>
+                </div>
+                <div class="social-login-element">
+                    <img src="img/face.svg" alt="">
+                    <span>Facebook</span>
+                </div>
             </div>
-        </div>
+    
+            
+          </div>
+            
+      </div>
     </div>
-
-    <!--toastify JS-->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <!--doc js-->
-    <script src="../firebase/login.js" type="module"></script>
+</body>
+</html>
