--- a/views/home.hbs
+++ b/views/home.hbs
@@ -23,7 +23,7 @@
 </header>
 
 <section class="wave-contenedor website">
-        <img src="img/primer.jpg" alt="">
+        <img src="/img/primer.png" alt="">
         <div class="contenedor-textos-main">
             <h2 class="titulo left">¿Quiénes Somos?</h2>
             <p class="parrafo">
