--- a/public/css/app.css
+++ b/public/css/app.css
@@ -140,6 +140,8 @@ html {
   overflow: hidden;
   margin: auto;
   padding: 0 0 50px 0;
+  display: flex;
+  align-items: center;
 }
 
 .contenedor {
