--- a/views/home.hbs
+++ b/views/home.hbs
@@ -23,7 +23,7 @@
 </header>
 
 <section class="wave-contenedor website">
-        <img src="img/primer.jpg" alt="">
+        <img src="img/primer.png" alt="">
         <div class="contenedor-textos-main">
             <h2 class="titulo left">¿Quiénes Somos?</h2>
             <p class="parrafo">
@@ -67,20 +67,6 @@
         </div>
 </section>
 
-{{!-- <select class="galeria">
-        <div class="contenedor">
-            <h2 class="titulo">Y Mucho mas</h2>
-            <article class="galeria-cont">
-                <img src="img/segundo.jpg" alt="">
-                <img src="img/tercero.webp" alt="">
-                <img src="img/cuatro.webp" alt="">
-                <img src="img/quinto.jpg" alt="">
-                <img src="img/sexto.jpg" alt="">
-                <img src="img/septimo.jpg" alt="">
-            </article>
-            </div>
-</select> --}}
-
 <section class="info-lat">
     <div class="contenedor last-section">
         <div class="contenedor-text-main">
@@ -96,7 +82,6 @@
             </p>
             <a href="cta">Mas info</a>
         </div>
-        <img src="img/verguenza.jpg" alt>
     </div>
     <div class="svg-wave" style="height: 150px; overflow:hidden;">
         <svg viewBox= "0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
