--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,43 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="./css/app.css">
-    
-    <title>Login</title>
-</head>
-<body>
+<div class="login_todo">
     <div class="login-container">
         <img class="image-container" src="img/violeta.jpg" alt="">
-
-          <div class="login-info-container">
+        <div class="login-info-container">
             <h1 class="title">Inicia sesión:</h1>
             <form class="inputs-container">
                 <input class="input" type="text" placeholder="Usuario">
                 <input class="input" type="text" placeholder="Contraseña">
                 <p><span class="span"> Olvidaste tu Contraseña</span></p>
                 <button class="btn">login</button>
-                <p>¿Todavia no tenes una cuenta? <span class="span">Hace click aca</span></p>
+                <p>¿Todavia no tenes una cuenta? <span class="span">Hace click acá</span></p>
             </form>
             <p>O tambien por: </p>
-               <div class="social-login">
+            <div class="social-login">
                 <div class="social-login-element">
-                   <img src="img/google.svg" alt="">
+                    <img src="img/google.svg" alt="">
                     <span>Google</span>
                 </div>
                 <div class="social-login-element">
                     <img src="img/face.svg" alt="">
                     <span>Facebook</span>
                 </div>
-            </div>
-    
-            
-          </div>
-            
-      </div>
+            </div>            
+        </div>          
     </div>
-</body>
-</html>
+</div>
