--- a/public/scss/login/login.scss
+++ b/public/scss/login/login.scss
@@ -11,6 +11,9 @@
 body {
     height: 100vh;
     font-family: 'Poppins', sans-serif;
+}
+
+.login_todo{
     background-image: linear-gradient(120deg,rgba(253,245,207,1) 15%, rgba(156,114,216,1) 60%) ;
 }
 
@@ -21,7 +24,7 @@ body {
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
-    overflow: hidden;
+    overflow: hidden; 
 }
 
 .login-info-container {
