--- a/public/scss/landing/landing.scss
+++ b/public/scss/landing/landing.scss
@@ -30,6 +30,10 @@ html{
     border: 3px solid #2c1454;
 }
 
+.bg-landing{
+    background-color: #fff;
+}
+
 .nav_landing{
     color: #fff;
     display: flex;
