--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,5 @@
-<header class="hero">
+<div class="bg-landing">
+    <header class="hero">
     <nav>
         <div class="nav_landing">
             <div style="display:flex;align-items: baseline;">
@@ -128,6 +129,9 @@
             </span>
         </div>
 </footer>
+</div>
+
+
 
 <script src="https://kit.fontawesome.com/c15b744a04.js" crossorigin="anonymous"></script>
 <style media="all" id="fa-v4-font-face"></style>
