se modifico la card de anecdotas

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -61,7 +61,7 @@
                 <i class="far fa-clone" aria-hidden="true"></i>
                 <h3>Anécdotas</h3>
                 <p>
-                    Relatos breve de un acontecimientos extraños, curiosos o divertidos.</p>
+                    Relatos breve de un acontecimientos curiosos o divertidos.</p>
                 <a href class="cta">Mas info</a>
             </article>
         </div>
