--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -74,7 +74,7 @@
                 <span id="emoji">​✨</span>
                 <span id="emoji">🎉</span>
             </div>               
-            <div class="div-area-mensaje" style="display: flex;margin: 0 1rem;">
+            <div class="div-area-mensaje" style="display: flex;margin: 0 1rem;padding: 0 0 0.2rem 0">
 {{!--             <h6 class="text-center w-100 fs-4">Username</h6> --}}
                 <form action="" class="gap-2" id="formMensaje">
                     <div class="area-mensaje">
