--- a/public/scss/mensajeria/chat.scss
+++ b/public/scss/mensajeria/chat.scss
@@ -21,6 +21,7 @@
 .divisiones{
     display:flex;
     height: 100%;
+    background-color: #ffffff;
 }
 
 /* ---- nav y parte superior de la página ---- */
@@ -101,7 +102,11 @@
         display: flex;
         background-color: #110f13;
         align-items: baseline;
-        padding: 0.3rem 0.5rem;
+        padding: 0.5rem 0.5rem;
+
+        h6{
+            margin-bottom: 0;
+        }
     }
     
     .canales{
@@ -208,6 +213,7 @@
         i{
             font-size: 1.9rem;
         }
+
     }
 /* ===== Scrollbar CSS ===== */
         /* Chrome, Edge, and Safari */
@@ -228,7 +234,7 @@
     .chat_estructura{
         display: flex;
         flex-direction: column;
-        height: 83vh;
+        height: 80vh;
         overflow-y: auto;
         position: relative;
 
@@ -327,7 +333,7 @@
         display: flex;
         align-items: center;    
         border-bottom: 1px solid rgb(61, 61, 61);
-        margin: 0 0.2rem;
+        padding: 0 0.2rem;
 
         i{
             font-size: 1.9rem;
@@ -335,6 +341,7 @@
 
         h3{
             margin-left: 0.2rem;
+            padding: 0.2rem 0;
         }
     }
 
@@ -350,6 +357,10 @@
 
     .form-control-chat{
         padding-bottom: 20px;
+        width: 100%;
+        border: 0;
+        outline: 0;
+
     }
 
     .area-mensaje {
@@ -424,7 +435,7 @@
     display: flex;
     border-left: 1px solid rgba(61, 61, 61, 0.425);
     flex-direction: column;
-    margin-top: 10px;
+    padding-top: 10px;
 /*     width: 18%; */
     
     .users_online{
