--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1110,6 +1110,7 @@ body {
   width: auto;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 .chat-area .container_emojis {
   position: absolute;
@@ -1118,7 +1119,7 @@ body {
   gap: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39);
   padding: 5px 10px;
-  top: 690px;
+  bottom: 44px;
   right: 190px;
   background-color: white;
 }
@@ -1126,8 +1127,22 @@ body {
   font-size: 2rem;
   cursor: pointer;
 }
-.chat-area .container_emojis.open_container_emojis {
+.chat-area .open_container_emojis {
   display: grid;
+}
+.chat-area .container_stickers {
+  position: absolute;
+  display: none;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39);
+  padding: 5px 10px;
+  bottom: 44px;
+  right: 190px;
+  background-color: white;
+}
+.chat-area .container_stickers span#sticker img {
+  width: 10%;
 }
 .chat-area button#btn-enviar {
   width: auto;
