--- a/public/scss/mensajeria/chat.scss
+++ b/public/scss/mensajeria/chat.scss
@@ -380,6 +380,7 @@
         width: auto;
         display: flex;
         align-items: center;
+        cursor: pointer;
     }
 
     .container_emojis{
@@ -389,7 +390,7 @@
         gap: 10px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39);
         padding: 5px 10px;
-        top: 690px;
+        bottom: 44px;
         right: 190px;
         background-color: white;
 
@@ -397,11 +398,27 @@
             font-size: 2rem;
             cursor: pointer;
         }
-
-        &.open_container_emojis{
+    }
+    
+        .open_container_emojis{
             display: grid;
         }
-    }
+
+    .container_stickers{
+        position: absolute;
+        display: none;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39);
+        padding: 5px 10px;
+        bottom: 44px;
+        right: 190px;
+        background-color: white;
+
+        span#sticker img{
+            width: 10%;
+        }
+    };    
 
     button#btn-enviar {
         width: auto;
